classDiagram
    class Product {
        -String productId
        -String name
        -double price
    }
    class Inventory {
        -Map~Product,int~ stock
        +checkAvailability()
        +dispense()
    }
    class VendingMachine {
        -Inventory inventory
        -double currentAmount
        -MachineState state
        +selectProduct()
        +insertMoney()
        +dispense()
    }
    VendingMachine --> Inventory
    Inventory --> Product
